--- a/src/app/modules/section-components/spinner/pages/spinner-examples/spinner-examples.component.html
+++ b/src/app/modules/section-components/spinner/pages/spinner-examples/spinner-examples.component.html
@@ -2,11 +2,11 @@
   <app-viewer title="Tipos">
     <div component class="spinner-container">
       <o-spinner></o-spinner>
-      <o-spinner type="primary"></o-spinner>
       <o-spinner type="secondary"></o-spinner>
+      <o-spinner type="tertiary"></o-spinner>
       <o-spinner type="success"></o-spinner>
       <o-spinner type="danger"></o-spinner>
-      <o-spinner type="light"></o-spinner>
+      <div class="p-2 pb-1 bg-dark"><o-spinner type="light"></o-spinner></div>
       <o-spinner type="dark"></o-spinner>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
@@ -33,7 +33,7 @@
 
   <app-viewer title="Expandible">
     <div component class="spinner-container">
-      <div style="width: 64px">
+      <div style="width: 96px">
         <o-spinner [isExpandable]="true"></o-spinner>
       </div>
     </div>
@@ -45,10 +45,9 @@
     </div>
   </app-viewer>
 
-  <app-viewer title="Con mensaje">
-    <div component class="d-flex flex-column align-items-center">
-      <o-spinner size="lg"></o-spinner>
-      <small class="mt-2">Cargando...</small>
+  <app-viewer title="Con descripción">
+    <div component class="text-center">
+      <o-spinner size="lg" description="Cargando..."></o-spinner>
     </div>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
       <button class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"></button>
