fix: barra de progreso

--- a/src/app/modules/section-components/progress-bar/pages/progress-bar-examples/demo/progress-bar-demo.component.html
+++ b/src/app/modules/section-components/progress-bar/pages/progress-bar-examples/demo/progress-bar-demo.component.html
@@ -1,6 +1,6 @@
 <p class="steps">Descripción</p>
 <div class="progress">
-  <div class="progress-bar bg-info" role="progressbar" [style.width.%]="percentage | number"></div>
+  <div class="progress-bar bg-primary" role="progressbar" [style.width.%]="percentage | number"></div>
 </div>
 
 <o-button type="link" size="sm" (click)="clickPrev()">Anterior</o-button>
