--- a/src/app/modules/section-components/progress-bar/pages/progress-bar-examples/progress-bar-examples.component.html
+++ b/src/app/modules/section-components/progress-bar/pages/progress-bar-examples/progress-bar-examples.component.html
@@ -32,7 +32,7 @@
 
   <app-viewer title="Simple">
     <div component class="mb-5">
-      <o-progress-bar type="info" [currentStep]="5"></o-progress-bar>
+      <o-progress-bar [currentStep]="5"></o-progress-bar>
     </div>
     <div component>
       <o-progress-bar type="success" [currentStep]="4"></o-progress-bar>
