--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -24,8 +24,8 @@
       </p>
       <code highlight-js [lang]="'bash'">{{ exampleComment }}</code>
       <div class="home-buttons">
-        <a class="btn btn-secondary" routerLink="/components">Componentes</a>
-        <a class="btn btn-primary" routerLink="/get-started">Introducción</a>
+        <a class="btn btn-primary btn-lg" routerLink="/get-started">Introducción</a>
+        <a class="btn btn-outline-primary btn-lg" routerLink="/components">Componentes</a>
       </div>
       <p class="home-version">Actualmente en v1.0.0</p>
     </div>
@@ -38,7 +38,7 @@
           <i class="bx bxs-component card-icon"></i>
           <div class="card-body">
             <h3 class="card-title">
-              <a routerLink="/components" class="card-title-link">Componentes</a>
+              <a routerLink="https://gcba.github.io/Obelisco-V2/components" class="card-title-link" target="_blank" rel="noopener noreferrer">Componentes</a>
             </h3>
             <p class="card-text">El sistema de diseño proporciona componentes accesibles para la
               ideación y desarrollo de productos digitales.</p>
@@ -50,7 +50,7 @@
           <i class="bx bxs-palette card-icon"></i>
           <div class="card-body">
             <h3 class="card-title">
-              <a routerLink="https://gcba.github.io/Obelisco-V2/components/colors" class="card-title-link">Guía de estilos</a>
+              <a routerLink="https://gcba.github.io/Obelisco-V2/components/colors" class="card-title-link" target="_blank" rel="noopener noreferrer">Guía de estilos</a>
             </h3>
             <p class="card-text">Los estilos reflejan el lenguaje visual de los y detallan las
               características que le dan la personalidad al sistema
@@ -63,7 +63,7 @@
           <i class="bx bxs-book-open card-icon"></i>
           <div class="card-body">
             <h3 class="card-title">
-              <a routerLink="https://gcba.github.io/estandares/contenido/comunicar-con-claridad/" class="card-title-link">Contenidos</a>
+              <a routerLink="https://gcba.github.io/estandares/contenido/comunicar-con-claridad/" class="card-title-link" target="_blank" rel="noopener noreferrer">Contenidos</a>
             </h3>
             <p class="card-text">Son los lineamientos a tener en cuenta a la hora de redactar
               contenidos en los productos digitales del Gobierno de la Ciudad.</p>
