--- a/src/app/modules/section-components/custom-content/pages/custom-content-api/custom-content-api.component.html
+++ b/src/app/modules/section-components/custom-content/pages/custom-content-api/custom-content-api.component.html
@@ -33,8 +33,6 @@
       <code highlight-js >{{customExample}}</code>
     </pre>
 
-    <br />
-
     <h2 class="h3">Reglas y Consideraciones:</h2>
     <ul>
       <li>
@@ -57,18 +55,18 @@
         <li>Alerta</li>
         <li>Banner</li>
         <li>Bloque de trámite</li>
-        <li>Colapsable</li>
+        <!-- <li>Colapsable</li>
         <li>Destacado</li>
-        <li>Footer</li>
+        <li>Footer</li> -->
       </div>
-      <div class="ml-md-5 ml-0">
+      <!-- <div class="ml-md-5 ml-0">
         <li>Header</li>
         <li>Mapa</li>
         <li>Mensaje de estado</li>
         <li>Modal</li>
         <li>Panel</li>
         <li>Tarjetas</li>
-      </div>
+      </div> -->
     </ul>
   </div>
 </section>
