--- a/src/app/modules/section-components/section-components.component.scss
+++ b/src/app/modules/section-components/section-components.component.scss
@@ -14,9 +14,9 @@
       width: 20%;
       min-width: 300px;
       max-width: 300px;
-      background-color: #f5f5f5;
+      background-color: #f5f3f9;
       padding: 20px 20px 40px 20px;
-      border-right: 1px solid #e5e5e5;
+      // border-right: 1px solid #e5e5e5;
       height: fit-content;
       border-radius: 0.5rem;
       height: calc(100vh - 80px);
