--- a/src/app/modules/get-started/get-started.component.html
+++ b/src/app/modules/get-started/get-started.component.html
@@ -69,7 +69,7 @@
       </section>
 
       <section class="mb-3 pt-5 section-intro" id="section1">
-        <h2 class="h3">Sistema de Diseño Obelisco</h2>
+        <h2 class="h4 mb-3">Sistema de Diseño Obelisco</h2>
         <hr />
         <p>
           Es el sistema de diseño para productos digitales del Gobierno de la
@@ -82,28 +82,10 @@
           estándares de usabilidad para lograr una experiencia ideal para las
           personas usuarias.
         </p>
-        <div class="card-deck max-cards-1 mt-4">
-          <o-card
-            title="Storybook"
-            description="Herramienta donde está disponibilizada la construcción HTML y clases utilizadas de los componentes de Obelisco."
-            link="https://gcba.github.io/Obelisco/"
-            icon="bx bx-code-alt"
-            [isHorizontal]="true"
-            [isBordered]="true"
-          ></o-card>
-          <o-card
-            title="Sistema y estándares"
-            description="Características que deben cumplir los desarrollos digitales para el Gobierno de la Ciudad de Buenos Aires impulsados por la Agencia de Sistemas de Información."
-            link="https://gcba.github.io/estandares/componentes/acceso/"
-            icon="bx bx-notepad"
-            [isHorizontal]="true"
-            [isBordered]="true"
-          ></o-card>
-        </div>
       </section>
 
       <section class="mb-3 pt-5 section-intro" id="section2">
-        <h2>Cómo usar NgxObelisco</h2>
+        <h2 class="h4 mb-3">Cómo usar NgxObelisco</h2>
         <hr />
         <p>
           NgxObelisco se distribuye por medio del
@@ -116,7 +98,7 @@
           poder actualizarla fácilmente.
         </p>
         <div>
-          <h3>Instalación</h3>
+          <h3 class="text-xl text-body-secondary mb-2">Instalación</h3>
           <p>
             Para instalarlo en un proyecto que ya usa npm, hay que ejecutar:
           </p>
@@ -129,20 +111,21 @@
         </div>
         <br />
         <div>
-          <h3>Requerimientos</h3>
+          <h3 class="text-xl text-body-secondary mb-2">Requerimientos</h3>
           <p>
-            <strong>Node.js</strong>: Se recomienda utilizar la versión ^18.X.X.
+            <strong>Node.js</strong>: Se recomienda utilizar la versión <code>^18.X.X</code>.
           </p>
           <p>
-            <strong>Angular</strong>: Este proyecto requiere Angular 17.
+            <strong>Angular</strong>: Este proyecto requiere Angular <code>17</code>.
             Asegúrate de tener Angular 17.X.X instalado globalmente o
             especificado en tu proyecto.
           </p>
         </div>
         <div>
-          <blockquote class="mx-0 mb-0">
-            <p>
-              <strong>Importante</strong><br />
+          
+          <blockquote>
+            <p> 
+              <strong>Importante</strong> <br>
               Revisá las
               <a
                 href="https://asijira-confluence.buenosaires.gob.ar/display/ASI/Versiones++y+Herramientas+aceptadas+por+la+ASI"
@@ -159,9 +142,9 @@
       </section>
 
       <section class="mb-3 pt-5 section-intro" id="section3">
-        <h2>Importar módulos</h2>
+        <h2 class="h4 mb-3">Importar módulos</h2>
         <hr />
-        <p>Además de importar componente por componente como por ejemplo:</p>
+        <p class="mb-2">Además de importar componente por componente como por ejemplo:</p>
         <div class="d-flex flex-column align-items-end p-0" appClipboard>
           <button
             class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
@@ -178,10 +161,10 @@
       </section>
 
       <section class="mb-3 pt-5 section-intro" id="section4">
-        <h2>Iconografía</h2>
+        <h2 class="h4 mb-3">Iconografía</h2>
         <hr />
         <div class="mt-4">
-          <h3>Boxicons</h3>
+          <h3 class="text-xl text-body-secondary mb-2">Boxicons</h3>
           <p>
             Obelisco utiliza la librería de <strong>Boxicons</strong> que se
             puede instalar de las siguientes maneras:
@@ -213,7 +196,7 @@
           </div>
         </div>
         <div class="mt-5">
-          <h3>Material Icons Rounded</h3>
+          <h3 class="text-xl text-body-secondary mb-2">Material Symbols Rounded</h3>
           <p>
             Obelisco utiliza la librería de
             <strong>Material Icons Rounded</strong> que se puede instalar de las
@@ -227,6 +210,13 @@
             <code highlight-js lang="'bash'">{{ materialIcons }}</code>
           </div>
 
+          <p>Es importante que incluyas el import a Material Symbols en tu hoja de estilos si lo usas via NPM, asi como también los estilos referidos al fill de los íconos.</p>
+          <div class="d-flex flex-column align-items-end p-0" appClipboard>
+            <button
+              class="btn btn-sm btn-outline-tertiary btn-clipboard btn-icon"
+            ></button>
+            <code highlight-js lang="'bash'">{{ materialIconsCss }}</code>
+          </div>
           <p>
             Para utilizarlas con su CDN podemos hacerlo de la siguiente forma:
           </p>
@@ -240,7 +230,7 @@
       </section>
 
       <section class="mb-3 pt-5 section-intro" id="section5">
-        <h2>Tipografía</h2>
+        <h2 class="h4 mb-3">Tipografía</h2>
         <hr />
         <p>
           Obelisco requiere las tipografías <strong>Nunito</strong> y
@@ -267,12 +257,12 @@
         </section> -->
 
       <section class="mb-3 pt-5 section-intro" id="section6">
-        <h2>Javascript</h2>
+        <h2 class="h4 mb-3">Javascript</h2>
         <hr />
         <p>
-          Como NgxObelisco está construido sobre Obelisco y Bootstrap 4,
+          Como NgxObelisco está construido sobre Obelisco v.2 y Bootstrap 5,
           <a
-            href="https://getbootstrap.com/docs/4.6/getting-started/introduction/#js"
+            href="https://getbootstrap.com/docs/5.3/getting-started/introduction/"
             target="_blank"
             rel="noreferrer"
             >debemos tener esas dependencias</a
@@ -293,7 +283,7 @@
       </section>
 
       <section class="mb-3 pt-5 section-intro pb-5" id="section7">
-        <h2>Mantenimiento y colaboración</h2>
+        <h2 class="h4 mb-3">Mantenimiento y colaboración</h2>
         <hr />
         <p>
           El mantenimiento y desarrollo de Obelisco lo hace el equipo de la
