--- a/src/app/modules/get-started/get-started.component.html
+++ b/src/app/modules/get-started/get-started.component.html
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="row flex-row-reverse">
-    <div class="col-12 col-lg-4 position-relative">
-      <div class="intro-menu d-none d-lg-block">
+    <div class="col-12 col-xl-3 position-relative">
+      <div class="intro-menu d-none d-xl-block">
         <strong class="intro-menu__title">En esta página</strong>
         <hr />
         <nav class="navegación-indice">
@@ -57,7 +57,7 @@
         </nav>
       </div>
     </div>
-    <div class="col-lg-8 col-12">
+    <div class="col-xl-9 col-12">
       <section>
         <h1>Introducción</h1>
         <br />
