--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -8,7 +8,7 @@
       />
     </div>
     <div class="content-box">
-      <h1>Ngx-Obelisco</h1>
+      <h1>Ngx-Obelisco-v17</h1>
       <h2 class="text-secondary">
         La librería de componentes de Obelisco para Angular
       </h2>
