--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -9,15 +9,15 @@
     </div>
     <div class="content-box">
       <h1>Ngx-Obelisco-v17</h1>
-      <h2 class="text-secondary">
+      <h2 class="text-xl text-body-secondary mb-2">
         La librería de componentes de Obelisco para Angular
       </h2>
-      <p class="lead">
+      <p class="text-lg">
         Ngx-Obelisco es una librería de componentes UI para Angular destinado a
         facilitar el trabajo de desarrolladores en proyectos y activos digitales
         de la Ciudad de Buenos Aires.
       </p>
-      <p class="lead">
+      <p class="text-lg">
         Sus componentes, basados en el sistema de diseño Obelisco, son
         eficientes, responsivos y fáciles de usar.<br />
         Conocé la librería, descargala y comenzá a usarla.
