--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -24,7 +24,7 @@
       </p>
       <code highlight-js [lang]="'bash'">{{ exampleComment }}</code>
       <div class="home-buttons">
-        <a class="btn btn-primary btn-lg" routerLink="/get-started">Introducción</a>
+        <a class="btn btn-outline-primary btn-lg" routerLink="/get-started">Introducción</a>
         <a class="btn btn-outline-primary btn-lg" routerLink="/components">Componentes</a>
       </div>
       <p class="home-version">Actualmente en v1.0.0</p>
