--- a/src/app/modules/section-components/footer/pages/footer-examples/footer-examples.component.html
+++ b/src/app/modules/section-components/footer/pages/footer-examples/footer-examples.component.html
@@ -17,8 +17,8 @@
 
   <app-viewer title="Con indicador">
     <o-footer component [isPhoneSectionHidden]="true" indicatorText="¿Te fue útil esta página?">
-      <button class="btn btn-primary">Sí, me fue útil</button>
-      <button class="btn btn-secondary">No me sirvió</button>
+      <button class="btn btn-outline-secondary">Sí, me fue útil</button>
+      <button class="btn btn-outline-secondary">No me sirvió</button>
     </o-footer>
     <div appClipboard class="d-flex flex-column align-items-end p-0" component-html>
       <button class="btn btn-sm btn-outline-tertiary btn-clipboard">Copiar</button>
