--- a/src/app/modules/section-components/dropdown/dropdown-navigation/pages/dropdown-navigation-api/dropdown-navigation-api.component.html
+++ b/src/app/modules/section-components/dropdown/dropdown-navigation/pages/dropdown-navigation-api/dropdown-navigation-api.component.html
@@ -35,7 +35,7 @@
   <hr />
 
   <div class="section-type">
-    <h3>DropdownSelectionItem</h3>
+    <h3>DropdownNavigationItem</h3>
     <p>
       Permite establecer los valores de la propiedad <strong>items</strong>.
     </p>
